# Pack-man

./: CMakeLists.txt  DataStructs.h  ECS_ARCHITECTURE.md  ECS_DESIGN_GUIDE.md  ECS_DOCUMENTATION_INDEX.md  ECS_IMPLEMENTATION_SUMMARY.md  ECS_QUICKSTART.md  Entities.cpp  Entities.h  GameManager.cpp  GameManager.h  LevelLoader.cpp  LevelLoader.h  Main.cpp  Tile.cpp  Tile.h  TileData.h  TileDataFactory.h  TileSystem.cpp  TileSystem.h  UpdateInput.cpp  UpdateState.cpp  build.rar
Assets/Levels/: level1.json  level1.txt  level2.json  level2.txt  level3.json  level4.json
Entities/: Abilities.h  Actor.cpp  Actor.h  Components.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityFactory.h  EntityManager.cpp  EntityManager.h  GameMaganer.cpp  GameManager.h  Player.cpp  Player.h  ResourceManager.h  Systems.cpp  Systems.h
Entities/AI/: AIUtils.cpp  AIUtils.h  BehaviorTree.h
Entities/Pathfinding/: Pathfinding.cpp  Pathfinding.h
GUI/: Utils.cpp  Utils.h
GUI/Elements/: AbilityIcon.h  Button.h  GUIElement.cpp  GUIElement.h  ScoreIcon.h  Text.h  TextArea.h
GUI/Windows/: ABILITYBUILDER_INTEGRATION_GUIDE.txt  AbilityMenu.cpp  AbilityMenu.h  ErrorWindow.cpp  ErrorWindow.h  GUI.h  GameMenu.cpp  GameMenu.h  GameWindow.cpp  GameWindow.h  MainMenu.cpp  MainMenu.h  MainMenuWindow.cpp  MainMenuWindow.h  MenuManager.cpp  MenuManager.h  PauseMenu.cpp  PauseMenu.h  ResultsMenu.cpp  ResultsMenu.h
